--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,23 +2,34 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    //id 'kotlin-android-extensions'
-    id 'kotlin-parcelize'
+    id 'kotlin-android-extensions'             //used for data binding
+    //id 'android-extensions'                  //used for data binding
+
+    //id 'kotlin-parcelize'
+    // should be used instead kotlin-android-extension
+    // but failing on setupWithNavController method
+
     id 'androidx.navigation.safeargs.kotlin'
     id 'dagger.hilt.android.plugin'
 }
+
 
 android {
     compileSdk 31
 
     defaultConfig {
         applicationId "com.example.foody"
-        minSdk 30
+        minSdk 28
         targetSdk 31
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        //TODO: remove this after migration to Hilt
+        //added so it doesnt fail on some unknown processor issue
+        //javaCompileOptions.annotationProcessorOptions.arguments['dagger.hilt.disableModulesHaveInstallInCheck'] = 'true'
+
     }
 
     buildTypes {
@@ -62,8 +73,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0-alpha03'
 
     // Navigation Component
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    var nav_version = "2.4.0-alpha08"
+    //added suffix  -ktx  for kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+    //implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    //implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
     // Room components
     implementation "androidx.room:room-runtime:2.4.0-alpha04"
@@ -89,8 +105,13 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-android-compiler:2.38.1"
 
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    var dagger_version = "2.38.1"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+
+//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+//    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
